tests/NormalTests/paczka1/small_fuzzy/79475980.err
Error in line 6: 1RSO0xey S997 62,3
Error in line 7: 1RSO0xey A854 3,5
Error in line 8: NgR3UXRqPd A854 32,8
Error in line 9: 1RSO0xey S560 68,5
